<resources>
    <string name="app_name">ADSB-Sniffer</string>
    <string name="title_section_setup">Set up of receiver</string>
    <string name="title_section_recordings">Recordings</string>
    <string name="title_section_status">Status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rate">Rate of messages[p/s]:</string>
    <string name="known_planes">Known airplanes:</string>
    <string name="settings_gns_mode">Mode of GNS receiver:</string>
    <string name="settings_heartbeat">Enable heartbeat:</string>
    <string name="settings_timestamp">Enable external timestamps:</string>
    <string name="menu_recording_switch">recording</string>
    <string name="send_recording">Send recording(s)</string>
    <string name="delete_recording">Delete recording(s)</string>
    <string name="count_planes">Number of known planes:</string>
    <string name="no_device_found">No usb ads-b receiver found!</string>
    <string name="position">Position:</string>
    <string name="countryflag">flag of the country</string>
    <string name="gps_disabled">Gps is disabled!</string>
    <string name="total_count_modes_messages">Total count of mode-s messages:</string>
    <string name="total_count_adsb_messages">Total count of ads-b messages:</string>
    <string name="packet_rate">Packet rate:</string>
    <string name="files_deleted">File(s) successfully deleted!</string>
    <string name="files_not_deleted">File(s) not deleted!</string>
    <string name="lookup_db_failed">Lookup in the database failed!</string>
    <string name="recordinglist_item_description">Adsb-Msgs: %1$d, duration: %2$sh, %3$dkB</string>
    <string name="rename_file">Rename file to:</string>
    <string name="renamed_to">File renamed to:</string>
    <string name="location_format">Latitude: %1$s°\nLongitude: %2$s°\nSpeed: %3$s m/s</string>
    <string name="location_altitude">Altitude: %d</string>
    <string name="first_occurrence">First occurrence</string>
    <string name="last_occurrence">Last occurrence</string>
    <string name="format_packet_second">%s p/s</string>
    <string name="flag">flag</string>
    <string name="icao24">ICAO24</string>
    <string name="packets_adsb_modes">Packets ADS-B, Mode-S</string>
    <string name="planes_in_the_last_minutes">Planes in the last %d minutes:</string>
    <string name="enabled">Enabled</string>
    <string name="title_section_about">About</string>
    <string name="version_number">Version number: 1.0</string>
    <string name="developer">Developer:</string>
    <string name="contact">Contact person:</string>
    <string name="couldnt_copy_file">Couldn\'t copy the file to external storage!</string>
    <string name="send_to">Send to</string>
    <string name="licenses">Licenses</string>
    <string name="license_flags">Copyright © 2013 Go Squared Ltd. http://www.gosquared.com/\n\nPermission is hereby granted, free of charge, to any person obtaining\na copy of this software and associated documentation files (the\n"Software"), to deal in the Software without restriction, including\nwithout limitation the rights to use, copy, modify, merge, publish,\ndistribute, sublicense, and/or sell copies of the Software, and to\npermit persons to whom the Software is furnished to do so, subject to\nthe following conditions:\n\nThe above copyright notice and this permission notice shall be included\nin all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,\nEXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF\nMERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.\nIN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY\nCLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,\nTORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE\nSOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="license_numerpicker">The MIT License (MIT)\n\nCopyright © 2014 Luke Horvat\n\nPermission is hereby granted, free of charge, to any person obtaining a copy\nof this software and associated documentation files (the "Software"), to deal\nin the Software without restriction, including without limitation the rights\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell\ncopies of the Software, and to permit persons to whom the Software is\nfurnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in\nall copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\nTHE SOFTWARE.</string>
</resources>