<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_rate"
            style="@style/text_button"/>

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/count_planes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/textView_countplanes"
            style="@style/text_button"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_gpsstate"
            style="@style/text_button" />
</LinearLayout>

