<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="6dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageview_countryflag"
            android:contentDescription="@string/countryflag"
            android:src="@drawable/flag_empty" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/text_icao24"
            android:textSize="32sp"
            style="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/first_occurrence"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@android:style/TextAppearance.Medium"
        android:id="@+id/text_plane_first"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/last_occurrence"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@android:style/TextAppearance.Medium"
        android:id="@+id/text_plane_last"/>
</LinearLayout>