<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Large"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/disco_lab_logo"
                android:contentDescription="Disco logo"
                android:id="@+id/image_disco_logo"
                android:scaleType="fitStart" />

            <TextView
                android:padding="3dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="disco.cs.uni-kl.de"
                style="@android:style/TextAppearance.Medium"
                android:id="@+id/text_disco_page" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/developer" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium"
            android:text="Markus Gräb\nm_graeb11@cs.uni-kl.de"
            android:id="@+id/text_email1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            style="@android:style/TextAppearance.Medium"
            android:text="@string/contact" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:style/TextAppearance.Medium"
            android:text="Matthias Schäfer\nschaefer@cs.uni-kl.de"
            android:id="@+id/text_email2" />
    </LinearLayout>

</LinearLayout>